# logisim-assembler

./: .gitignore  CMakeLists.txt  README.md  flake.nix  test_program.8bit  test_program.asm8
src/: main.cpp
src/ast/: Node.h
src/ast/nodes/: MovNode.cpp  MovNode.h  RegNode.cpp  RegNode.h  RootNode.cpp
src/codegen/: CodegenObserver.cpp  CodegenObserver.h
src/lexer/: Lexer.cpp  Token.cpp  Token.h
src/parser/: Parser.cpp  Parser.h
